# magic-areas

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECOMPOSITION-OPPORTUNITIES.md  NEXT_STEPS.md  PHASE-5-PLAN.md  README.md  REFACTOR.md  REPOSITORY_WORK_NOTES.md  design philosophy.md  hacs.json  implementation-plan.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  lint.yml  pytest.yml
base/: entities.py
custom_components/magic_areas/: __init__.py  area_constants.py  area_maps.py  area_state.py  attrs.py  components.py  config_flow.py  config_flow_filters.py  config_keys.py  const.py  coordinator.py  cover.py  cover_group_entities.py  defaults.py  diagnostics.py  entity.py  enums.py  fan.py  fan_group_entities.py  feature_contracts.py  feature_info.py  feature_reader_common.py  feature_registry.py  features.py  group_entities.py  ha_domains.py  icons.py  light.py  light_group_entities.py  light_group_events.py  light_groups.py  manifest.json  media_player_group_entities.py  migrations.py  models.py  option_defaults.py  platform_dispatch.py  policy.py  quality_scale.yaml  threshold.py
dev/ha/: .gitignore  AGENTS.md  README.md  compose.yaml
docs/contributing/: architecture.md  boundary-census-2026-04-18.md  control-intent-engine-plan-stub.md  control-runtime-consolidation-plan.md  design-philosophy.md  dev-simulation-guidance.md  development.md  fan-cover-default-automation-plan.md  implementation-plan.md  label-backed-control-membership-plan.md  lighting-adaptive-brightness-plan.md  lighting-adaptive-switching-plan.md  master-architecture-roadmap-plan.md  mcp-graph-hygiene.md  mcp-production-risk-hardening-plan.md  native-ha-feature-reduction-plan.md  native-ha-helper-api-research.md  native-ha-reduction-roadmap.md  options-flow-cleanup-repair-plan.md  options-flow-structure-plan.md  options-flow-test-rebuild-plan.md  phase-10-live-simulation-expansion-plan.md  phase-7-dead-code-audit.md  phase-closure-packet.md  refactoring-guide.md  repository-control-contract.md  runtime-boundaries.md  simulation-scenario-testing-plan.md  workstation-bootstrap.md
docs/diagrams/: feature_module_deps_after.gexf  feature_module_deps_after_colored.gexf  feature_module_deps_before.gexf  feature_module_deps_before_colored.gexf
docs/migration/: README.md  architecture.md  config-flow.md  coordinator.md  implementation-plan.md  release-notes.md  tests.md
docs/notes/: entity_loading_packaging_plan.md  layer3_policy_completion_plan.md  light_system_recomposition_plan.md  theoretical_architecture_map.md
scripts/: __init__.py  ha_dev_bootstrap.py  ha_dev_bootstrap.sh  ha_dev_clean_config.sh  ha_dev_init.sh  ha_dev_install_adaptive_lighting.sh  ha_dev_prepare.sh  ha_dev_reset.sh  ha_dev_simulate.py  ha_dev_simulate.sh  ha_dev_simulation_plan.py  ha_dev_start.sh  ha_dev_stop.sh  ha_dev_token.py  validate.sh  validate_basic.sh
scripts/ha_dev_simulation/: __init__.py  cli.py  client.py  entities.py  expectations.py  models.py  preflight.py  reset.py  runner.py  timing.py  traces.py
stubs/pytest_homeassistant_custom_component/: common.pyi
stubs/syrupy/: __init__.pyi
tests/: AGENTS.md  README.md  TEST_STRATEGY.md  conftest.py  const.py  helpers.py  helpers_timing.py  mocks.py  mocks_old.py  test_aggregates.py  test_area_reload.py  test_area_state.py  test_availability.py  test_ble_tracker_monitor.py  test_cleanup.py  test_climate_control.py  test_component_init.py  test_config_flow.py  test_coordinator.py  test_core_aggregates.py  test_core_config.py  test_core_presence.py  test_cover.py  test_cover_setup.py  test_diagnostics.py  test_exceptions.py  test_fan.py  test_fan_setup.py  test_health.py  test_helpers_area.py  test_init.py  test_light.py  test_light_complex.py  test_light_edge_cases.py  test_light_meta.py  test_magic.py  test_media_player.py  test_meta_area_state.py  test_presence_timeouts.py  test_restore.py  (+6 more)
tests/config_flow/: AGENTS.md  __init__.py  options_flow_testkit.py  test_area_steps.py  test_config_flow_basic.py  test_config_flow_errors.py  test_config_flow_feature_conf_handlers.py  test_config_flow_features.py  test_config_flow_features_e2e.py  test_config_flow_options.py  test_config_flow_options_e2e.py  test_config_flow_options_errors.py  test_config_flow_options_runtime.py  test_feature_config.py  test_feature_config_advanced.py  test_feature_config_climate.py  test_feature_helpers.py  test_feature_selection.py  test_options_flow_incremental_persistence.py  test_options_flow_integration.py  test_options_flow_routing.py  test_options_flow_translations.py
tests/core/: test_aggregates_edge_cases.py
tests/helpers/: __init__.py  assertions.py  config_entries.py  entities.py  lifecycle.py  platforms.py  registries.py  services.py  waits.py
tests/integration/: area_state_testkit.py  test_area_lifecycle.py  test_area_reload.py  test_area_state.py  test_area_state_robustness.py  test_area_state_transitions.py  test_availability.py  test_cache_synchronization.py  test_cleanup.py  test_climate_control_error_paths.py  test_component_init.py  test_comprehensive_state_machines.py  test_config_migrations.py  test_coordinator.py  test_coordinator_entity_loading.py  test_coordinator_lifecycle.py  test_coverage_reach_96.py  test_diagnostics.py  test_entity_state_edge_cases.py  test_error_recovery_paths.py  test_exceptions.py  test_fan_control_error_paths.py  test_final_coverage_push.py  test_helpers_area.py  test_init.py  test_magic.py  test_magic_meta_area_coverage.py  test_meta_area.py  test_meta_area_listener_registration.py  test_meta_area_state.py  test_native_group_helper_lifecycle.py  test_platform_initialization.py  test_presence_timeouts.py  test_restore.py  test_specific_error_paths.py  test_switch_error_paths.py  test_user_exposed_surface_contract.py
tests/scenarios/: __init__.py  cover_scenario_testkit.py  light_scenario_testkit.py  test_cover_automation.py  test_light_adaptive_lighting_coordination.py  test_light_adaptive_switching.py  test_light_advisory_brightness.py
tests/snapshots/: conftest.py  (+3 more)
(+352 files in other folders)
